force-app/main/default/objects/Account/fields/Nacionalidad_UDC__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidad_UDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nacionalidad</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Nacionalidad</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Accounts (Nacionalidad)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>