force-app/main/default/objects/Account/fields/nationalityid__c.field-meta.xml
<CustomField>
    <fullName>nationalityid__c</fullName>
    <label>nationalityid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>