force-app/main/default/objects/Account/fields/Natural_o_Juridico__c.field-meta.xml
<CustomField>
    <fullName>Natural_o_Juridico__c</fullName>
    <formula>IF( RecordType.Name =&apos;Natural&apos;, &apos;1&apos;, &apos;2&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Natural o Jurídico</label>
    <type>Text</type>
</CustomField>