force-app/main/default/objects/Account/fields/Nivel_organizacional__c.field-meta.xml
<CustomField>
    <fullName>Nivel_organizacional__c</fullName>
    <label>Tipo de contribuyente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asalariado</fullName>
            </value>
            <value>
                <fullName>Cuota Fija</fullName>
            </value>
            <value>
                <fullName>Gran Contribuyente</fullName>
            </value>
            <value>
                <fullName>Mediano Contribuyente</fullName>
            </value>
            <value>
                <fullName>No trabaja</fullName>
            </value>
            <value>
                <fullName>Trabajo Cuenta Propia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>