force-app/main/default/objects/Account/fields/No_permite_oportunidades__c.field-meta.xml
<CustomField>
    <fullName>No_permite_oportunidades__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No permite oportunidades</label>
    <type>Checkbox</type>
</CustomField>