force-app/main/default/objects/Account/fields/Nombre_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Comercial__c</fullName>
    <description>Campo para diferenciar cuando un cliente jur;idico tiene nombre de persona natural</description>
    <label>Nombre Comercial</label>
    <length>200</length>
    <type>Text</type>
</CustomField>