force-app/main/default/objects/Account/fields/NOMBRE_DEPARTAMENTO__c.field-meta.xml
<CustomField>
    <fullName>NOMBRE_DEPARTAMENTO__c</fullName>
    <label>Nombre el Departamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>