force-app/main/default/objects/Account/fields/NOMBRE_MUNICIPIO__c.field-meta.xml
<CustomField>
    <fullName>NOMBRE_MUNICIPIO__c</fullName>
    <label>Nombre del municipio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>