force-app/main/default/objects/Account/fields/NombreContacto2__c.field-meta.xml
<CustomField>
    <fullName>NombreContacto2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre del segundo contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cuentas (Nombre del segundo contacto)</relationshipLabel>
    <relationshipName>Cuentas1</relationshipName>
    <type>Lookup</type>
</CustomField>