force-app/main/default/objects/Account/fields/NombreContacto__c.field-meta.xml
<CustomField>
    <fullName>NombreContacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre del contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>