force-app/main/default/objects/Account/fields/Nombres__c.field-meta.xml
<CustomField>
    <fullName>Nombres__c</fullName>
    <label>Nombres</label>
    <length>50</length>
    <type>Text</type>
</CustomField>