force-app/main/default/objects/Account/fields/NRC__c.field-meta.xml
<CustomField>
    <fullName>NRC__c</fullName>
    <label>NRC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>