force-app/main/default/objects/Account/fields/NumeroTelefono__c.field-meta.xml
<CustomField>
    <fullName>NumeroTelefono__c</fullName>
    <label>Número de teléfono del cliente</label>
    <type>Phone</type>
</CustomField>