force-app/main/default/objects/Account/fields/ocupacionid__c.field-meta.xml
<CustomField>
    <fullName>ocupacionid__c</fullName>
    <label>ocupacionid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>