force-app/main/default/objects/Account/fields/Origen_de_los_fondos__c.field-meta.xml
<CustomField>
    <fullName>Origen_de_los_fondos__c</fullName>
    <label>Origen de los fondos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ahorro</fullName>
            </value>
            <value>
                <fullName>Bienes muebles</fullName>
            </value>
            <value>
                <fullName>Financiamiento instituciones financieras</fullName>
            </value>
            <value>
                <fullName>Herencia</fullName>
            </value>
            <value>
                <fullName>Ingresos del negocio</fullName>
            </value>
            <value>
                <fullName>Obsequio</fullName>
            </value>
            <value>
                <fullName>Premio de casino</fullName>
            </value>
            <value>
                <fullName>Premio de lotería</fullName>
            </value>
            <value>
                <fullName>Remesa</fullName>
            </value>
            <value>
                <fullName>Rifa</fullName>
            </value>
            <value>
                <fullName>Venta de inmuebles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>