force-app/main/default/objects/Account/fields/Pa_s__c.field-meta.xml
<CustomField>
    <fullName>Pa_s__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pais</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Cuentas (País)</relationshipLabel>
    <relationshipName>Cuentas3</relationshipName>
    <type>Lookup</type>
</CustomField>