force-app/main/default/objects/Account/fields/Pais_de_origen__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_origen__c</fullName>
    <label>País de origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Afganistán</fullName>
            </value>
            <value>
                <fullName>Albania</fullName>
            </value>
            <value>
                <fullName>Alemania</fullName>
            </value>
            <value>
                <fullName>Andorra</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Antigua y Barbuda</fullName>
            </value>
            <value>
                <fullName>Arabia Saudita</fullName>
            </value>
            <value>
                <fullName>Argelia</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Armenia</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Azerbaiyán</fullName>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
            <value>
                <fullName>Bangladés</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Baréin</fullName>
            </value>
            <value>
                <fullName>Bélgica</fullName>
            </value>
            <value>
                <fullName>Belice</fullName>
            </value>
            <value>
                <fullName>Benín</fullName>
            </value>
            <value>
                <fullName>Bielorrusia</fullName>
            </value>
            <value>
                <fullName>Birmania</fullName>
            </value>
            <value>
                <fullName>Bolivia</fullName>
            </value>
            <value>
                <fullName>Bosnia y Herzegovina</fullName>
            </value>
            <value>
                <fullName>Botsuana</fullName>
            </value>
            <value>
                <fullName>Brasil</fullName>
            </value>
            <value>
                <fullName>Brunéi</fullName>
            </value>
            <value>
                <fullName>Bulgaria</fullName>
            </value>
            <value>
                <fullName>Burkina Faso</fullName>
            </value>
            <value>
                <fullName>Burundi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>