force-app/main/default/objects/Account/fields/Payables__c.field-meta.xml
<CustomField>
    <fullName>Payables__c</fullName>
    <description>Valor por omision N</description>
    <label>Payables</label>
    <length>5</length>
    <type>Text</type>
</CustomField>