force-app/main/default/objects/Account/fields/personcorporationcode__c.field-meta.xml
<CustomField>
    <fullName>personcorporationcode__c</fullName>
    <label>Tipo de Cliente</label>
    <length>5</length>
    <type>Text</type>
</CustomField>