force-app/main/default/objects/Account/fields/PrefijoTelefono__c.field-meta.xml
<CustomField>
    <fullName>PrefijoTelefono__c</fullName>
    <label>Prefijo del número de teléfono</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>