force-app/main/default/objects/Account/fields/PRELACIONADA__c.field-meta.xml
<CustomField>
    <fullName>PRELACIONADA__c</fullName>
    <label>Persona relacionada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>