force-app/main/default/objects/Account/fields/Primer_Apellido__c.field-meta.xml
<CustomField>
    <fullName>Primer_Apellido__c</fullName>
    <label>Primer Apellido</label>
    <length>50</length>
    <type>Text</type>
</CustomField>