force-app/main/default/objects/Account/fields/Procedencia__c.field-meta.xml
<CustomField>
    <fullName>Procedencia__c</fullName>
    <label>Procedencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nacional</fullName>
            </value>
            <value>
                <fullName>Extranjero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>