force-app/main/default/objects/Account/fields/Profesion_UDC__c.field-meta.xml
<CustomField>
    <fullName>Profesion_UDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profesión</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Profesión</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Accounts (Profesión)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>