force-app/main/default/objects/Account/fields/profesionid__c.field-meta.xml
<CustomField>
    <fullName>profesionid__c</fullName>
    <label>profesionid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>