force-app/main/default/objects/Account/fields/Programa__c.field-meta.xml
<CustomField>
    <fullName>Programa__c</fullName>
    <label>Programa dónde se realizó la modificació</label>
    <length>32</length>
    <type>Text</type>
</CustomField>