force-app/main/default/objects/Account/fields/Prueba_Color__c.field-meta.xml
<CustomField>
    <fullName>Prueba_Color__c</fullName>
    <label>Prueba Color</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>