force-app/main/default/objects/Account/fields/Puntaje2__c.field-meta.xml
<CustomField>
    <fullName>Puntaje2__c</fullName>
    <formula>Puntaje__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Puntaje</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>