force-app/main/default/objects/Account/fields/Puntaje__c.field-meta.xml
<CustomField>
    <fullName>Puntaje__c</fullName>
    <label>Puntaje</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>