force-app/main/default/objects/Account/fields/RegionVentas__c.field-meta.xml
<CustomField>
    <fullName>RegionVentas__c</fullName>
    <label>Región para ventas</label>
    <length>32</length>
    <type>Text</type>
</CustomField>