force-app/main/default/objects/Account/fields/Representante_Legal__c.field-meta.xml
<CustomField>
    <fullName>Representante_Legal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representante Legal</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cuentas (Representante Legal)</relationshipLabel>
    <relationshipName>Cuentas2</relationshipName>
    <type>Lookup</type>
</CustomField>