force-app/main/default/objects/Account/fields/Requiere_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Requiere_aprobacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuario que envia la cuenta a aprobacion</description>
    <label>Requiere aprobacion</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>