force-app/main/default/objects/Account/fields/Requiere_aprobacion_Name__c.field-meta.xml
<CustomField>
    <fullName>Requiere_aprobacion_Name__c</fullName>
    <formula>Requiere_aprobacion__r.FirstName &amp; &quot; &quot; &amp; Requiere_aprobacion__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requiere aprobacion Name</label>
    <type>Text</type>
</CustomField>