force-app/main/default/objects/Account/fields/Responsable_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Responsable_de_pago__c</fullName>
    <label>Responsable de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financiamiento por un tercero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>