force-app/main/default/objects/Account/fields/RUC__c.field-meta.xml
<CustomField>
    <fullName>RUC__c</fullName>
    <label>RUC</label>
    <length>25</length>
    <type>Text</type>
</CustomField>