force-app/main/default/objects/Account/fields/RutaPrimaria__c.field-meta.xml
<CustomField>
    <fullName>RutaPrimaria__c</fullName>
    <label>Código de la ruta primaria</label>
    <length>16</length>
    <type>Text</type>
</CustomField>