force-app/main/default/objects/Account/fields/RutaSecundaria__c.field-meta.xml
<CustomField>
    <fullName>RutaSecundaria__c</fullName>
    <label>Código de la ruta secundaria</label>
    <length>16</length>
    <type>Text</type>
</CustomField>