force-app/main/default/objects/Account/fields/SEARCHTYPE__c.field-meta.xml
<CustomField>
    <fullName>SEARCHTYPE__c</fullName>
    <label>SEARCHTYPE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>