force-app/main/default/objects/Account/fields/Secuencia_contactos__c.field-meta.xml
<CustomField>
    <fullName>Secuencia_contactos__c</fullName>
    <label>Secuencia contactos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>