force-app/main/default/objects/Account/fields/SecuenciaContacto__c.field-meta.xml
<CustomField>
    <fullName>SecuenciaContacto__c</fullName>
    <label>Secuencia del contacto</label>
    <length>32</length>
    <type>Text</type>
</CustomField>