force-app/main/default/objects/Account/fields/SecuenciaDireccion__c.field-meta.xml
<CustomField>
    <fullName>SecuenciaDireccion__c</fullName>
    <label>Secuencia de la dirección</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>