force-app/main/default/objects/Account/fields/SecuenciaEmail__c.field-meta.xml
<CustomField>
    <fullName>SecuenciaEmail__c</fullName>
    <label>Secuencia del correo electrónico</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>