force-app/main/default/objects/Account/fields/SecuenciaTelefono__c.field-meta.xml
<CustomField>
    <fullName>SecuenciaTelefono__c</fullName>
    <label>Secuencia del número de teléfono</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>