force-app/main/default/objects/Account/fields/SecuenciaVisita__c.field-meta.xml
<CustomField>
    <fullName>SecuenciaVisita__c</fullName>
    <label>Secuencia de visita</label>
    <length>32</length>
    <type>Text</type>
</CustomField>