force-app/main/default/objects/Account/fields/SecuenciaVisitaRutaSec__c.field-meta.xml
<CustomField>
    <fullName>SecuenciaVisitaRutaSec__c</fullName>
    <label>Secuencia de visita de la ruta secundari</label>
    <length>32</length>
    <type>Text</type>
</CustomField>