force-app/main/default/objects/Account/fields/Segmentaci_n_por_linea__c.field-meta.xml
<CustomField>
    <fullName>Segmentaci_n_por_linea__c</fullName>
    <description>Almacenara el campo padre para que se deriven los cmapos de segmentacion según tableau</description>
    <label>Segmentación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agroforestal</fullName>
            </value>
            <value>
                <fullName>Aseguradora</fullName>
            </value>
            <value>
                <fullName>Autolote</fullName>
            </value>
            <value>
                <fullName>Automotriz</fullName>
            </value>
            <value>
                <fullName>Avicola</fullName>
            </value>
            <value>
                <fullName>Banco</fullName>
            </value>
            <value>
                <fullName>Bebidas y Licores</fullName>
            </value>
            <value>
                <fullName>Café</fullName>
            </value>
            <value>
                <fullName>Camaronera</fullName>
            </value>
            <value>
                <fullName>Construcción</fullName>
            </value>
            <value>
                <fullName>Corredor de Seguros</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>Distribución de Consumo masivo</fullName>
            </value>
            <value>
                <fullName>Embutidos y carnes frias</fullName>
            </value>
            <value>
                <fullName>Energía</fullName>
            </value>
            <value>
                <fullName>Equipos electricos</fullName>
            </value>
            <value>
                <fullName>Exploración Petrolera</fullName>
            </value>
            <value>
                <fullName>Financiera</fullName>
            </value>
            <value>
                <fullName>Funeraria</fullName>
            </value>
            <value>
                <fullName>Ganaderia</fullName>
            </value>
            <value>
                <fullName>Gobierno</fullName>
            </value>
            <value>
                <fullName>Hidrocarburos y derivados</fullName>
            </value>
            <value>
                <fullName>Ingenios</fullName>
            </value>
            <value>
                <fullName>Lacteos</fullName>
            </value>
            <value>
                <fullName>LOGISTICA</fullName>
            </value>
            <value>
                <fullName>Maquinaria industrial</fullName>
            </value>
            <value>
                <fullName>Matadero</fullName>
            </value>
            <value>
                <fullName>Metalurgia</fullName>
            </value>
            <value>
                <fullName>Mineria</fullName>
            </value>
            <value>
                <fullName>Muebles y electrodomesticos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>