force-app/main/default/objects/Account/fields/SEQUENCECONTACT__c.field-meta.xml
<CustomField>
    <fullName>SEQUENCECONTACT__c</fullName>
    <label>SEQUENCECONTACT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>