force-app/main/default/objects/Account/fields/SEQUENCEOTHERADDRESS__c.field-meta.xml
<CustomField>
    <fullName>SEQUENCEOTHERADDRESS__c</fullName>
    <label>SEQUENCEOTHERADDRESS</label>
    <length>10</length>
    <type>Text</type>
</CustomField>