force-app/main/default/objects/Account/fields/statecode__c.field-meta.xml
<CustomField>
    <fullName>statecode__c</fullName>
    <label>statecode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>