force-app/main/default/objects/Account/fields/SubClasificacion__c.field-meta.xml
<CustomField>
    <fullName>SubClasificacion__c</fullName>
    <label>SubClasificación</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Clasificacion__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Natural</fullName>
            </value>
            <value>
                <fullName>Jurídico</fullName>
            </value>
            <value>
                <fullName>PEP</fullName>
            </value>
            <value>
                <fullName>Empresa Estatal</fullName>
            </value>
            <value>
                <fullName>Empresa Privada</fullName>
            </value>
            <value>
                <fullName>OSFL</fullName>
            </value>
            <value>
                <fullName>Sujeto Obligado</fullName>
            </value>
            <value>
                <fullName>Cédula de identidad</fullName>
            </value>
            <value>
                <fullName>Cédula de residente</fullName>
            </value>
            <value>
                <fullName>Pasaporte</fullName>
            </value>
            <value>
                <fullName>RUC</fullName>
            </value>
            <value>
                <fullName>D.U.I</fullName>
            </value>
            <value>
                <fullName>Abogado</fullName>
            </value>
            <value>
                <fullName>Administrador de Empresas</fullName>
            </value>
            <value>
                <fullName>Agricultor / Ganadero</fullName>
            </value>
            <value>
                <fullName>Ama De Casa</fullName>
            </value>
            <value>
                <fullName>Arquitecto</fullName>
            </value>
            <value>
                <fullName>Biólogo</fullName>
            </value>
            <value>
                <fullName>Chef</fullName>
            </value>
            <value>
                <fullName>Comerciante</fullName>
            </value>
            <value>
                <fullName>Comunicador</fullName>
            </value>
            <value>
                <fullName>Contador</fullName>
            </value>
            <value>
                <fullName>Dentista</fullName>
            </value>
            <value>
                <fullName>Diplomático / Estadista</fullName>
            </value>
            <value>
                <fullName>Diseñador</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Economista</fullName>
            </value>
            <value>
                <fullName>Enfermero</fullName>
            </value>
            <value>
                <fullName>Farmaceutico</fullName>
            </value>
            <value>
                <fullName>Fotógrafo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>