force-app/main/default/objects/Account/fields/subledgerinactivecode__c.field-meta.xml
<CustomField>
    <fullName>subledgerinactivecode__c</fullName>
    <label>Inactivo o no</label>
    <length>5</length>
    <type>Text</type>
</CustomField>