force-app/main/default/objects/Account/fields/SubZona__c.field-meta.xml
<CustomField>
    <fullName>SubZona__c</fullName>
    <label>Sub-zona del cliente</label>
    <length>80</length>
    <type>Text</type>
</CustomField>