force-app/main/default/objects/Account/fields/TCONSECUTIVE__c.field-meta.xml
<CustomField>
    <fullName>TCONSECUTIVE__c</fullName>
    <label>Consecutivo del numero de telefono</label>
    <length>255</length>
    <type>Text</type>
</CustomField>