force-app/main/default/objects/Account/fields/TCONSECUTIVEEMAIL__c.field-meta.xml
<CustomField>
    <fullName>TCONSECUTIVEEMAIL__c</fullName>
    <label>Consecutivo del correo electronico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>