force-app/main/default/objects/Account/fields/Tel_fono_representante_legal__c.field-meta.xml
<CustomField>
    <fullName>Tel_fono_representante_legal__c</fullName>
    <formula>Representante_Legal__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teléfono representante legal</label>
    <type>Text</type>
</CustomField>