force-app/main/default/objects/Account/fields/Telefono_casa__c.field-meta.xml
<CustomField>
    <fullName>Telefono_casa__c</fullName>
    <label>Teléfono casa</label>
    <type>Phone</type>
</CustomField>