force-app/main/default/objects/Account/fields/Telefono_celular__c.field-meta.xml
<CustomField>
    <fullName>Telefono_celular__c</fullName>
    <label>Teléfono celular</label>
    <type>Phone</type>
</CustomField>