force-app/main/default/objects/Account/fields/Telefono_de_la_empresa__c.field-meta.xml
<CustomField>
    <fullName>Telefono_de_la_empresa__c</fullName>
    <label>Teléfono de la empresa</label>
    <type>Phone</type>
</CustomField>