force-app/main/default/objects/Account/fields/TELEPHONENUMBER__c.field-meta.xml
<CustomField>
    <fullName>TELEPHONENUMBER__c</fullName>
    <label>Numero de telefono del cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>