force-app/main/default/objects/Account/fields/TELEPHONETYPE__c.field-meta.xml
<CustomField>
    <fullName>TELEPHONETYPE__c</fullName>
    <label>Tipo de telefono del cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>