force-app/main/default/objects/Account/fields/Tipo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Cliente__c</fullName>
    <label>Tipo de Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
            </value>
            <value>
                <fullName>Ocasional</fullName>
            </value>
            <value>
                <fullName>Habitual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>