force-app/main/default/objects/Account/fields/Tipo_de_b_squeda__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_b_squeda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Dejar en blanco al momento de la creación, por defecto se crea como Customer.
Otros valores: Employees, Applicants</inlineHelpText>
    <label>Tipo de usuario</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tipo de busqueda</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Cuentas (Tipo de búsqueda)</relationshipLabel>
    <relationshipName>Cuentas4</relationshipName>
    <type>Lookup</type>
</CustomField>